# logitrades

./: .gitignore  deploy.sh  docker-compose.production.yaml  docker-compose.yaml  nginx.conf  package.json  trades_to_import.csv
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e3ee8fdaccd_trade_comment_field_added.py  77790d8c0077_initial_schema.py  a1b2c3d4e5f6_convert_quantity_to_notional.py  b5f2a1c9d3e4_trade_tags_field_added.py  d8e1f2a3b4c5_add_trade_list_indexes.py
backend/src/: database.py  main.py  models.py
backend/src/auth/: __init__.py  dependencies.py  jwt_handler.py  oauth2_scheme.py  user_utils.py
backend/src/db/: __init__.py  email_verification_token_orm.py  password_reset_token_orm.py  refresh_token_orm.py  trade_orm.py  user_orm.py
backend/src/domain/: __init__.py
backend/src/domain/trade/: enums.py  trade.py  trade_domain.py
backend/src/domain/user/: user_domain.py
backend/src/errors/: __init__.py  closed_at_errors.py  error_response.py  exception_handles.py  import_errors.py  stop_loss_errors.py  take_profit_errors.py  trade_validators.py
backend/src/forms/: __init__.py  trade_form.py
backend/src/models/: __init__.py  trade_form.py  trade_import.py  trade_response.py
backend/src/models/auth/: auth_token.py  user.py
backend/src/models/trade/: trade_facets_response.py  trade_form.py  trade_import.py  trade_list_query.py  trade_list_response.py  trade_response.py  trade_summary_response.py
backend/src/routes/: auth.py
backend/src/services/: __init__.py  email_service.py  errors_handler_service.py  trade_metrics.py  trade_query_service.py
backend/src/tests/: conftest.py  test_trade_form.py  test_trade_import.py  test_trade_metrics.py  test_trade_query_service.py
backend/src/utils/: __init__.py  datetime_utils.py  get_current_time.py  get_env_var.py  normalize_csv_row.py
frontend/: DESIGN.md  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src/: app.css  (+3 more)
(+136 files in other folders)
